fix: search input foucs needs visibility

--- a/src/components/Application/styles/Sidebar/Servers.module.scss
+++ b/src/components/Application/styles/Sidebar/Servers.module.scss
@@ -50,6 +50,7 @@
     & > .input_wrapper {
       & > input {
         @include disappear;
+        visibility: visible !important;
       }
       & > div {
         cursor: pointer;
